# flux

./: Cargo.toml  LICENSE  README.md
docs/: architecture-review.md  usage.md
flux/: Cargo.toml  README.md
flux-derive/: Cargo.toml
flux-derive/src/: lib.rs
flux-derive/tests/: derive_contracts.rs
flux-mongodb/: Cargo.toml
flux-mongodb/src/: aggregate.rs  entity.rs  filter.rs  lib.rs  repository.rs
flux-postgres/: Cargo.toml
flux-postgres/src/: aggregate.rs  entity.rs  filter.rs  lib.rs  repository.rs
flux-sqlserver/: Cargo.toml
flux-sqlserver/src/: aggregate.rs  entity.rs  filter.rs  lib.rs  repository.rs
flux/examples/: basic_usage.rs
flux/src/: aggregate.rs  config.rs  entity.rs  error.rs  filter.rs  lib.rs  page.rs  repository.rs  specification.rs
flux/src/postgres/: db.rs  mod.rs  repository.rs
flux/src/sqlserver/: mod.rs  repository.rs
