[package]
name = "flux-derive"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "Procedural macros for flux"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"

