[package]
name = "flux-derive"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "Procedural macros for flux"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

[dev-dependencies]
flux = { path = "../flux" }
flux-mongodb = { path = "../flux-mongodb" }
flux-postgres = { path = "../flux-postgres" }
mongodb = "3"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1", features = ["v4", "serde"] }

