[package]
name = "flux-mongodb"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "MongoDB adapter for flux"
repository.workspace = true

[dependencies]
async-trait = "0.1.87"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flux = { path = "../flux" }
futures-util = "0.3"
mongodb = "3"
rust_decimal = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
