[package]
name = "flux-postgres"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "PostgreSQL adapter for flux"
repository.workspace = true

[dependencies]
async-trait = "0.1.87"
flux = { path = "../flux" }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1", features = ["v4", "serde"] }
