[package]
name = "flux"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "Backend-neutral repository contracts, filters, pagination, and aggregate metadata"
repository.workspace = true

[features]
default = []

[dependencies]
async-trait = "0.1.87"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
