[package]
name = "flux"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
description = "Backend-neutral repository contracts, filters, pagination, and aggregate metadata"
repository.workspace = true

[features]
default = []

[dependencies]
async-stream = "0.3"
async-trait = "0.1.87"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-core = "0.3"
rust_decimal = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
